--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@ div {
     color: red;
     font-size: 80px;
     background-color: hsla(216, 59%, 47%, 0.644);
+    width: calc(100% / 3);
+    /* margin-top: 100px;
+    margin-left: 100px;
+    margin-bottom: 50px;
+    margin-right: 0px; */
+    margin: 100px 0 50px 100px;
 }
