--- a/style.css
+++ b/style.css
@@ -1,30 +1,11 @@
 div {
     color: red;
-    font-size: 9px;
-    background-color: rgba(49, 106, 191, 0.644);
-    width: calc(100% / 3);
-    margin: 100px 0 80px 50px;
-}
-
-
-h1 {
-    color: red;
     font-size: 80px;
-    background-color: rgba(131, 27, 88, 0.644);
-    /*width: calc(100% / 3);*/
-    margin: 100px 200px 50px 100px;
-}
-
-
-p {
-    color: red;
-    font-size: 50px;
-}
-
-div:hover,p:hover {
-    background-color: blue;
-}
-
-h1:hover {
-    background-color: rgb(91, 173, 62);
+    background-color: hsla(216, 59%, 47%, 0.644);
+    width: calc(100% / 3);
+    /* margin-top: 100px;
+    margin-left: 100px;
+    margin-bottom: 50px;
+    margin-right: 0px; */
+    margin: 100px 0 50px 100px;
 }
