--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ div {
 
 
 h1 {
-    color: red;
+    color: rgb(0, 55, 255);
     font-size: 80px;
     background-color: rgba(131, 27, 88, 0.644);
     /*width: calc(100% / 3);*/
