--- a/style.css
+++ b/style.css
@@ -11,8 +11,11 @@ h1 {
     color: rgb(0, 55, 255);
     font-size: 80px;
     background-color: rgba(131, 27, 88, 0.644);
-    /*width: calc(100% / 3);*/
+    /* width: calc(100% / 3); */
     margin: 100px 200px 50px 100px;
+    display: flex;
+    /* justify-content: center; */
+    
 }
 
 
