--- a/style.css
+++ b/style.css
@@ -1,58 +1,44 @@
-<<<<<<< HEAD
-        div {
-            color: green;
-            background-color: blue;
-            font-size: 120px;
-        }
-=======
 div {
-    color: red;
-    font-size: 9px;
-    background-color: rgba(49, 106, 191, 0.644);
-    width: calc(100% / 3);
-    margin: 100px 0 80px 50px;
+  color: green;
+  background-color: blue;
+  font-size: 120px;
 }
-
+div {
+  color: red;
+  font-size: 9px;
+  background-color: rgba(49, 106, 191, 0.644);
+  width: calc(100% / 3);
+  margin: 100px 0 80px 50px;
+}
 
 h1 {
-<<<<<<< HEAD
-    color: rgb(0, 55, 255);
-    font-size: 100px;
-    background-color: rgba(131, 27, 88, 0.644);
-    /* width: calc(100% / 3); */
-    margin: 100px 200px 50px 100px;
-    display: flex;
-    /* justify-content: center; */
-    
-=======
-    color: red;
-    font-size: 80px;
-    background-color: rgba(131, 27, 88, 0.644);
-    /*width: calc(100% / 3);*/
-    margin: 100px 200px 50px 100px;
->>>>>>> 05b8877730491917e72e53b5e82c08c11e69c432
-}
+  color: rgb(0, 55, 255);
+  font-size: 100px;
+  background-color: rgba(131, 27, 88, 0.644);
+  /* width: calc(100% / 3); */
+  margin: 100px 200px 50px 100px;
+  display: flex;
+  /* justify-content: center; */
 
+  color: red;
+  font-size: 80px;
+  background-color: rgba(131, 27, 88, 0.644);
+  /*width: calc(100% / 3);*/
+  margin: 100px 200px 50px 100px;
+}
 
 p {
-    color: red;
-    font-size: 50px;
-<<<<<<< HEAD
-    background-color: rgba(67, 194, 73, 0.644);
-    margin: 80px 250px 50px 30px;
-=======
->>>>>>> 05b8877730491917e72e53b5e82c08c11e69c432
+  color: red;
+  font-size: 50px;
+  background-color: rgba(67, 194, 73, 0.644);
+  margin: 80px 250px 50px 30px;
 }
 
-div:hover,p:hover {
-    background-color: blue;
+div:hover,
+p:hover {
+  background-color: blue;
 }
 
 h1:hover {
-    background-color: rgb(91, 173, 62);
-<<<<<<< HEAD
+  background-color: rgb(91, 173, 62);
 }
->>>>>>> f8031ad0e938ad34a2ff07e7507b504bcf52662c
-=======
-}
->>>>>>> 05b8877730491917e72e53b5e82c08c11e69c432
